Bug 1077264 - Keep searching until one correct fragment is found. r=kentuckyfriedtakahe